# case-picpay

./: .pre-commit-config.yaml  Makefile  pyproject.toml
notebook/: Q&A.ipynb
src/: main.py
src/entities/: model.py
