[tool.poetry]
name = "case-picpay"
version = "0.1.0"
description = "MLE Case: ML Server"
authors = ["Joao Victor Canavarro <jvcanavarro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
fastapi = "^0.112.1"
pytest = "^8.3.2"
mongomock = "^4.1.2"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
